syntax = "proto3";
import "AvatarTeam.proto";

option csharp_namespace = "FBEVJKGADQD.Protocol";
message AvatarTeamUpdateNotify {
	map<uint32, AvatarTeam> avatar_team_map = 1;
}