syntax = "proto3";

option csharp_namespace = "FBEVJKGADQD.Protocol";
message PingRsp {
  uint32 server_time = 5;
}
