syntax = "proto3";
import "ResVersionConfig.proto";

option csharp_namespace = "FBEVJKGADQD.Protocol";
message PlayerLoginRsp {
  string game_biz = 9;
  string country_code = 192;
  ResVersionConfig res_version_config = 650;
}